Migrate the post() method of HttpRequestHelper to use a Map instead of an array of String.